--- a/Shamazon/Shamazon.csproj
+++ b/Shamazon/Shamazon.csproj
@@ -260,6 +260,10 @@
     <Compile Include="Migrations\201811221547000_UpdateProducts1.Designer.cs">
       <DependentUpon>201811221547000_UpdateProducts1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812052309467_IntialDBsetup.cs" />
+    <Compile Include="Migrations\201812052309467_IntialDBsetup.Designer.cs">
+      <DependentUpon>201812052309467_IntialDBsetup.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ShoppingCart.cs" />
@@ -376,8 +380,8 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
-    <Content Include="Views\Shop\Index.cshtml" />
-    <Content Include="Views\Shop\Product.cshtml" />
+    <Content Include="Views\Shop\Index_.cshtml" />
+    <Content Include="Views\Shop\Productold.cshtml" />
     <Content Include="Views\Product\Add.cshtml" />
     <Content Include="Views\Manage\StartSelling.cshtml" />
     <Content Include="Views\Manage\Products.cshtml" />
@@ -386,6 +390,8 @@
     <Content Include="Views\Manage\EditProduct.cshtml" />
     <Content Include="Views\Home\Checkout.cshtml" />
     <Content Include="Views\Home\Cart.cshtml" />
+    <Content Include="Views\Shop\Product.cshtml" />
+    <Content Include="Views\Shop\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -443,6 +449,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201811221547000_UpdateProducts1.resx">
       <DependentUpon>201811221547000_UpdateProducts1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812052309467_IntialDBsetup.resx">
+      <DependentUpon>201812052309467_IntialDBsetup.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
