--- a/Shamazon/Web.config
+++ b/Shamazon/Web.config
@@ -10,13 +10,14 @@
   </configSections>
   <connectionStrings>
     <!--
-    ### connection string to local DB ###      -->
+    ### connection string to local DB ###      
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Shamazon-20181117073429.mdf;Initial Catalog=aspnet-Shamazon-20181117073429;Integrated Security=True" providerName="System.Data.SqlClient" />
+    -->
     
     <!-- 
-    ### connection string to Live DB
+    ### connection string to Live DB -->
     <add name="DefaultConnection" connectionString="Server=tcp:shamazon.database.windows.net,1433;Initial Catalog=ShAmazon_DB;Persist Security Info=False;User ID=shamin;Password=#Admin_pass_l!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
-    -->
+ 
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
